force-app/main/resources/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <description>Object contains Video/Articles</description>
    <label>Resource</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>