force-app/main/resources/objects/Resource__c/fields/article_external_link__c.field-meta.xml
<CustomField>
    <fullName>article_external_link__c</fullName>
    <label>Article External Link</label>
    <type>Url</type>
</CustomField>