force-app/main/resources/objects/Resource__c/fields/ArticleID__c.field-meta.xml
<CustomField>
    <fullName>ArticleID__c</fullName>
    <externalId>true</externalId>
    <label>ArticleID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>