force-app/main/resources/objects/Resource__c/fields/Byline__c.field-meta.xml
<CustomField>
    <fullName>Byline__c</fullName>
    <label>Byline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>