force-app/main/resources/objects/Resource__c/fields/Content_Class__c.field-meta.xml
<CustomField>
    <fullName>Content_Class__c</fullName>
    <label>Content Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Study-Specific</fullName>
            </value>
            <value>
                <fullName>Platform-TA</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>