force-app/main/resources/objects/Resource__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Study_Document</fullName>
                <label>Study Document</label>
            </value>
            <value>
                <fullName>Relevant_Link</fullName>
                <label>Relevant Link</label>
            </value>
            <value>
                <fullName>Submitted_Articles</fullName>
                <label>Submitted Articles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>