force-app/main/resources/objects/Resource__c/fields/document_type__c.field-meta.xml
<CustomField>
    <fullName>document_type__c</fullName>
    <label>Document type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
                <isActive>false</isActive>
                <label>Video</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>