force-app/main/resources/objects/Resource__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <inlineHelpText>Use this field to save the link to the image.  If you will be uploading an image, Salesforce will create this link for you.</inlineHelpText>
    <label>Image Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>