force-app/main/resources/objects/Resource__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <label>Likes</label>
    <summaryFilterItems>
        <field>Resource_Action__c.IsVoted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Resource_Action__c.Resource__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>