force-app/main/resources/objects/Resource__c/fields/Multimedia__c.field-meta.xml
<CustomField>
    <fullName>Multimedia__c</fullName>
    <inlineHelpText>Enter the link to where the multimedia is hosted.</inlineHelpText>
    <label>Multimedia Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>