force-app/main/resources/objects/Resource__c/fields/Remove_sharing__c.field-meta.xml
<CustomField>
    <fullName>Remove_sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove sharing</label>
    <type>Checkbox</type>
</CustomField>