force-app/main/resources/objects/Resource__c/fields/Resource_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Resource_Visibility__c</fullName>
    <label>Resource Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>RP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>