force-app/main/resources/objects/Resource__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>