force-app/main/resources/objects/Resource__c/fields/Therapeutic_Areas__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Areas__c</fullName>
    <label>SiteCore Conditions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>