force-app/main/resources/objects/Resource__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>