force-app/main/resources/objects/Resource__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
<!--                <fullName>Helpful Links</fullName>-->
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
<!--                <label>Helpful Links</label>-->
            </value>
            <value>
                <fullName>Patient advocacy groups</fullName>
            </value>
            <value>
                <fullName>Articles for caregivers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>