force-app/main/resources/objects/Resource__c/fields/Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date__c</fullName>
    <label>Updated Date</label>
    <type>Date</type>
</CustomField>