force-app/main/resources/objects/Resource__c/fields/URL_Part__c.field-meta.xml
<CustomField>
    <fullName>URL_Part__c</fullName>
    <label>URL Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>