force-app/main/resources/objects/Resource__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <inlineHelpText>Enter the link to where the video is hosted.</inlineHelpText>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>