force-app/main/resources/objects/Resource__c/fields/X3rd_Party_Source__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Source__c</fullName>
    <label>3rd Party Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HealthDay</fullName>
            </value>
            <value>
                <fullName>IQVIA</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>