force-app/main/resources/objects/Resource__c/recordTypes/Article.recordType-meta.xml
<RecordType>
    <fullName>Article</fullName>
    <active>true</active>
    <label>Article</label>
</RecordType>