force-app/main/resources/objects/Resource__c/recordTypes/Multimedia.recordType-meta.xml
<RecordType>
    <fullName>Multimedia</fullName>
    <active>true</active>
    <label>Multimedia</label>
</RecordType>