force-app/main/resources/objects/Resource__c/recordTypes/Relevant_Link.recordType-meta.xml
<RecordType>
    <fullName>Relevant_Link</fullName>
    <active>true</active>
    <label>Relevant Link</label>
</RecordType>