force-app/main/resources/objects/Resource__c/recordTypes/Study_Document.recordType-meta.xml
<RecordType>
    <fullName>Study_Document</fullName>
    <active>true</active>
    <label>Study Document</label>
</RecordType>