force-app/main/resources/objects/Resource__c/recordTypes/Submitted_Articles.recordType-meta.xml
<RecordType>
    <fullName>Submitted_Articles</fullName>
    <active>true</active>
    <label>Submitted Articles</label>
</RecordType>