force-app/main/resources/objects/Resource__c/recordTypes/Video.recordType-meta.xml
<RecordType>
    <fullName>Video</fullName>
    <active>true</active>
    <label>Video</label>
</RecordType>