force-app/main/resources/objects/Resource__c/validationRules/Check_Video_fo_video_content.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Video_fo_video_content</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
 AND(
RecordType.Name = &#39;Study Document&#39;,  ISPICKVAL( document_type__c, &#39;Video&#39;),  ISBLANK(Video__c) ),True, False)</errorConditionFormula>
    <errorDisplayField>Video__c</errorDisplayField>
    <errorMessage>Enter the link to the video in the Video Link field.</errorMessage>
</ValidationRule>