force-app/main/resources/objects/Resource__c/listViews/Articles.listView-meta.xml
<ListView>
    <fullName>Articles</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Content_Class__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Content_Type__c</field>
        <operation>equals</operation>
        <value>Article</value>
    </filters>
    <filters>
        <field>Content_Class__c</field>
        <operation>notEqual</operation>
        <value>Study Document</value>
    </filters>
    <label>Articles</label>
</ListView>