force-app/main/resources/objects/Resource__c/listViews/Multimedia.listView-meta.xml
<ListView>
    <fullName>Multimedia</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Content_Class__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Content_Type__c</field>
        <operation>equals</operation>
        <value>Multimedia</value>
    </filters>
    <label>Multimedia</label>
</ListView>