force-app/main/resources/objects/Resource__c/listViews/Relevant_Links.listView-meta.xml
<ListView>
    <fullName>Relevant_Links</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Content_Type__c</field>
        <operation>equals</operation>
        <value>Relevant_Link</value>
    </filters>
    <label>Relevant Links</label>
    <language>en_US</language>
</ListView>