force-app/main/resources/objects/Resource__c/listViews/Study_Documents.listView-meta.xml
<ListView>
    <fullName>Study_Documents</fullName>
    <columns>NAME</columns>
    <columns>Content_Class__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Resource__c.Study_Document</value>
    </filters>
    <label>Study Documents</label>
</ListView>