force-app/main/resources/objects/Resource__c/listViews/Submitted_Articles.listView-meta.xml
<ListView>
    <fullName>Submitted_Articles</fullName>
    <columns>NAME</columns>
    <columns>article_external_link__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Resource__c.Submitted_Articles</value>
    </filters>
    <label>Submitted Articles</label>
</ListView>